// Copyright 2021 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// If you change or add any fields in this file, update proto_visitors.h and
// potentially proto_enum_conversions.{h, cc}.

syntax = "proto2";

option java_multiple_files = true;
option java_package = "org.chromium.components.password_manager.core.browser.proto";

option optimize_for = LITE_RUNTIME;

package password_manager;

import "components/password_manager/core/browser/protos/password_with_local_data.proto";

// Response to a request sent to Google Mobile Services to request a list of
// passwords.
message ListPasswordsResult {
  // The list of password entries and corresponding additional info.
  repeated PasswordWithLocalData password_data = 1;
}
